# umesimd

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.txt  UMEBasicTypes.h  UMEInline.h  UMEMemory.h  UMESimd.h  UMESimdInterface.h  UMESimdInterfaceFunctions.h  UMESimdPluginNativeAVX.h  UMESimdPluginNativeAVX2.h  UMESimdPluginNativeAVX512.h  UMESimdPluginNativeKNC.h  UMESimdPluginScalarEmulation.h  UMESimdScalarEmulation.h  UMESimdScalarOperators.h  UMESimdTraits.h  UMESimdVectorEmulation.h  travis.yml
microbenchmarks/: CMakeLists.txt  average.cpp  build_tests.sh  histogram1.cpp  histogram2.cpp  polynomial.cpp  run_tests.sh
microbenchmarks/QuadraticSolver/: CMakeLists.txt  Makefile  QuadraticSolver.cpp  QuadraticSolverAVX2.h  QuadraticSolverAVXx.h  QuadraticSolverNaive.h  QuadraticSolverOptimized.h  QuadraticSolverSIMD.h  QuadraticSolverSIMD_nontemplate.h
microbenchmarks/average/: CMakeLists.txt  Makefile  average.cpp
microbenchmarks/explog/: CMakeLists.txt  Makefile  explog.cpp  explog.h  explog_scalar.h  explog_ume.h  explog_vdt.h  vdt_exp.h  vdt_log.h  vdtcore_common.h
microbenchmarks/fir_vertical/: CMakeLists.txt  Makefile  fir_vertical.cpp  fir_vertical_intel.h  fir_vertical_umesimd.h
microbenchmarks/histogram1/: CMakeLists.txt  histogram1.cpp
microbenchmarks/histogram2/: CMakeLists.txt  Makefile  histogram2.cpp
microbenchmarks/latencies/: builds.sh  latencies.cpp  latencies.h  latencies_16i.cpp  latencies_16u.cpp  latencies_32f.cpp  latencies_32i.cpp  latencies_32u.cpp  latencies_64f.cpp  latencies_64i.cpp  latencies_64u.cpp  latencies_8i.cpp  latencies_8u.cpp  latencies_float.cpp  latencies_float.h  latencies_int.cpp  latencies_int.h  latencies_mask.cpp  latencies_mask.h  latencies_uint.cpp  latencies_uint.h
microbenchmarks/latencies/output/: avx2_32f.txt  avx2_32f_2.txt  final_avx2.txt  final_scalar.txt  lat_avx2_3.txt.REMOVED.git-id  lat_avx2_4.txt  lat_avx2_5.txt  lat_avx2_7.txt  lat_avx2_fl.txt.REMOVED.git-id  novec_32f.txt  tmp_out_48.txt
microbenchmarks/mandelbrot/: UMEBasicTypes.h  UMEBitmap.cpp  UMEBitmap.h  UMEConstants.h  UMEEndianness.h  mandel.cpp  mandel.h  mandel_avx.cpp  mandel_basic.cpp  mandel_sse2.cpp  mandel_ume.h  mandelbrot.cpp  mandelbrot_ume.h
microbenchmarks/mandelbrot1/: CMakeLists.txt  Makefile  UMEBasicTypes.h  mandel_avx512.cpp  mandel_basic.cpp  mandel_sse2.cpp  mandelbrot.h  mandelbrot1.cpp  mandelbrot_ume.h
microbenchmarks/mandelbrot2/: CMakeLists.txt  Makefile  mandel_intel.h  mandel_openmp.h  mandel_ume.h  mandelbrot2.cpp
microbenchmarks/matmul/: CMakeLists.txt  matmul.cpp  matmul_AVX.h  matmul_AVX512.h  matmul_SSE.h  matmul_UMESIMD.h  matmul_common.h  matmul_fox.h  matmul_naive.h
microbenchmarks/polynomial/: CMakeLists.txt  Makefile  polynomial.cpp
microbenchmarks/sincos/: CMakeLists.txt  Makefile  sincos.cpp  sincos.h  sincos_scalar.h  sincos_ume.h  sincos_vdt.h
microbenchmarks/utilities/: TimingStatistics.h  UMEBitmap.cpp  UMEBitmap.h  UMEConstants.h  UMEEndianness.h
microbenchmarks/vs2015_sln/: microbenchmarks.sln  microbenchmarks.vcxproj
microbenchmarks/vs2015_sln/QuadraticSolver/: QuadraticSolver.vcxproj  QuadraticSolver.vcxproj.filters
microbenchmarks/vs2015_sln/average/: average.vcxproj  average.vcxproj.filters
microbenchmarks/vs2015_sln/explog/: explog.vcxproj  explog.vcxproj.filters
microbenchmarks/vs2015_sln/fir_vertical/: fir_vertical.vcxproj  fir_vertical.vcxproj.filters
microbenchmarks/vs2015_sln/histogram1/: histogram1.vcxproj  histogram1.vcxproj.filters
microbenchmarks/vs2015_sln/histogram2/: histogram2.vcxproj  histogram2.vcxproj.filters
microbenchmarks/vs2015_sln/mandelbrot1/: mandelbrot1.vcxproj  mandelbrot1.vcxproj.filters
microbenchmarks/vs2015_sln/mandelbrot2/: mandelbrot2.vcxproj  mandelbrot2.vcxproj.filters
microbenchmarks/vs2015_sln/polynomial/: polynomial.vcxproj  polynomial.vcxproj.filters
microbenchmarks/vs2015_sln/sincos/: sincos.vcxproj  (+1 more)
unittest/: CMakeLists.txt  Makefile  UMESIMDUnitTest.cpp  UMEUnitTestCommon.cpp  UMEUnitTestCommon.h  UMEUnitTestDataSets.cpp  UMEUnitTestDataSets.h  UMEUnitTestDataSets16.cpp  UMEUnitTestDataSets16.h  UMEUnitTestDataSets32.cpp  UMEUnitTestDataSets32.h  UMEUnitTestDataSets64.cpp  UMEUnitTestDataSets64.h  UMEUnitTestDataSets8.cpp  UMEUnitTestDataSets8.h  UMEUnitTestMasks.h  UMEUnitTestMemory.h  UMEUnitTestSimd.h  UMEUnitTestSimd1024b.cpp  UMEUnitTestSimd1024b.h  UMEUnitTestSimd128b.cpp  UMEUnitTestSimd128b.h  UMEUnitTestSimd16b.cpp  UMEUnitTestSimd16b.h  UMEUnitTestSimd256b.cpp  UMEUnitTestSimd256b.h  UMEUnitTestSimd32b.cpp  UMEUnitTestSimd32b.h  UMEUnitTestSimd512b.cpp  UMEUnitTestSimd512b.h  UMEUnitTestSimd64b.cpp  UMEUnitTestSimd64b.h  UMEUnitTestSimd8b.cpp  UMEUnitTestSimd8b.h  UMEUnitTestSwizzleMask.h  clean.sh  create_solution_gcc.sh  create_solution_vs2012.bat
unittest/build_vs2015/: build_vs2015.sln  build_vs2015.vcxproj  build_vs2015.vcxproj.filters
unittest/results/: gold.txt
(+436 files in other folders)
