add_subdirectory(average)
add_subdirectory(explog)
add_subdirectory(fir_vertical)
add_subdirectory(histogram1)
add_subdirectory(histogram2)
add_subdirectory(mandelbrot1)
add_subdirectory(mandelbrot2)
add_subdirectory(matmul)
add_subdirectory(polynomial)
add_subdirectory(QuadraticSolver)
add_subdirectory(sincos)
